# mrtui

./: Cargo.toml  LICENSE  README.md
src/: config.rs  git.rs  main.rs  markdown.rs
src/gitlab/: client.rs  mod.rs  types.rs
src/tui/: app.rs  mod.rs
src/tui/views/: checkout_panel.rs  help.rs  mod.rs  mr_detail.rs  mr_list.rs  settings.rs
