[package]
name = "mrtui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mrtui"
path = "src/main.rs"

[dependencies]
ratatui = { version = "0.29", features = ["crossterm"] }
tui-textarea = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
open = "5"
anyhow = "1"
pulldown-cmark = "0.12"
